syntax = "proto3";

package role;

service RoleService {
  rpc GetRolesByUserId (GetRolesRequest) returns (GetRolesResponse);
}

message GetRolesRequest {
  string userId = 1;
}

message GetRolesResponse {
  repeated string roles = 1;
}
